adding course + modify course + some css for it

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -50,3 +50,22 @@ input[type=submit]{
     background-color: gray;
 }
 
+//for add/modifyCourses.html start
+
+textarea {
+     resize: none;
+     height: 5rem;
+    font-family: 'Comfortaa';
+    width: 100%;
+    padding:12px 14px;
+    margin: 8px 0;
+    display: inline-block;
+    border: none;
+    border-radius: 10px;
+    box-sizing: border-box;
+}
+
+.confirmButtons{
+    display: inline-block;
+}
+//for add/modifyCourses.html end
