--- a/styles/style.css
+++ b/styles/style.css
@@ -55,4 +55,22 @@ input[type=submit] {
 #cancel {
   background-color: gray;
 }
+
+textarea {
+  resize: none;
+  height: 5rem;
+  font-family: 'Comfortaa';
+  width: 100%;
+  padding: 12px 14px;
+  margin: 8px 0;
+  display: inline-block;
+  border: none;
+  border-radius: 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.confirmButtons {
+  display: inline-block;
+}
 /*# sourceMappingURL=style.css.map */
