review page star rating

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   width: 100%;
   background-color: #F6EEE8;
@@ -67,11 +68,57 @@ input[type=submit] {
 }
 
 .rating {
-  text-align: center;
-  width: 76%;
-  padding: 10px;
-  border-radius: 8px;
+  display: inline-block;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: #EA576A;
+  border-radius: 8px;
+  width: 80%;
+}
+
+/* Modified from: https://github.com/mukulkant/Star-rating-using-pure-css */
+.rate {
+  float: left;
+  padding: 0 50px;
+  width: 50%;
+  margin: 0 auto;
+}
+
+.rate:not(:checked) > input {
+  position: absolute;
+  top: -9999px;
+}
+
+.rate:not(:checked) > label {
+  float: right;
+  width: 1em;
+  overflow: hidden;
+  white-space: nowrap;
+  cursor: pointer;
+  font-size: 30px;
+  color: #ccc;
+}
+
+.rate:not(:checked) > label:before {
+  content: '★ ';
+}
+
+.rate > input:checked ~ label {
+  color: #ffc700;
+}
+
+.rate:not(:checked) > label:hover,
+.rate:not(:checked) > label:hover ~ label {
+  color: #deb217;
+}
+
+.rate > input:checked + label:hover,
+.rate > input:checked + label:hover ~ label,
+.rate > input:checked ~ label:hover,
+.rate > input:checked ~ label:hover ~ label,
+.rate > label:hover ~ input:checked ~ label {
+  color: #c59b08;
 }
 
 #comment {
