--- a/styles/style.scss
+++ b/styles/style.scss
@@ -58,13 +58,53 @@ input[type=submit]{
     background-color: gray;
 }
 
-.rating{
-    text-align: center;
-    width: 76%;
-    padding: 10px;
-    border-radius: 8px;
+.rating {
+    display: inline-block;
+    justify-content: center;
     background-color: #EA576A;
+    border-radius: 8px;
+    width: 80%;
 }
+/* Modified from: https://github.com/mukulkant/Star-rating-using-pure-css */
+.rate {
+    float: left;
+    padding: 0 50px;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.rate:not(:checked) > input {
+    position:absolute;
+    top:-9999px;
+}
+.rate:not(:checked) > label {
+    float:right;
+    width:1em;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:30px;
+    color:#ccc;
+}
+.rate:not(:checked) > label:before {
+    content: '★ ';
+}
+.rate > input:checked ~ label {
+    color: #ffc700;    
+}
+.rate:not(:checked) > label:hover,
+.rate:not(:checked) > label:hover ~ label {
+    color: #deb217;  
+}
+.rate > input:checked + label:hover,
+.rate > input:checked + label:hover ~ label,
+.rate > input:checked ~ label:hover,
+.rate > input:checked ~ label:hover ~ label,
+.rate > label:hover ~ input:checked ~ label {
+    color: #c59b08;
+}
+
+
 #comment {
     font-size: 18px;
     resize: none;
