--- a/styles/style.scss
+++ b/styles/style.scss
@@ -137,3 +137,13 @@ textarea {
     display: inline-block;
 }
 //for add/modifyCourses.html end
+
+//user page start
+#userComments {
+    height: 20rem;
+    border-color: aquamarine; 
+    width:110%
+}
+
+
+//user page end
