Get rating, comment and keywords, and print to console

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -34,7 +34,7 @@ input[type=text]{
     width: 100%;
 }
 
-input[type=submit]{
+input[type=submit], #addRating{
     font-family: 'Comfortaa';
     text-align: center;
     border-radius: 8px;
