login to register page linked, check if password matches in reg

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@ h2 {
   font-family: 'Montserrat';
 }
 
-input[type=text] {
+input[type=text], input[type=password] {
   font-family: 'Comfortaa';
   width: 100%;
   padding: 12px 14px;
@@ -49,11 +49,13 @@ input[type=submit], #addRating {
   border: none;
   padding: 12px 20px;
   margin: 3px;
+  font-size: 15px;
   color: white;
   background-color: #D6001C;
 }
 
 #create {
+  text-decoration: none;
   font-family: 'Comfortaa';
   text-align: center;
   border-radius: 8px;
@@ -62,12 +64,14 @@ input[type=submit], #addRating {
   width: fit-content;
   border: none;
   padding: 12px 20px;
+  font-size: 15px;
   margin: 3px;
   color: white;
   background-color: #D6001C;
 }
 
 #cancel {
+  text-decoration: none;
   font-family: 'Comfortaa';
   text-align: center;
   border-radius: 8px;
@@ -76,7 +80,8 @@ input[type=submit], #addRating {
   width: fit-content;
   border: none;
   padding: 12px 20px;
-  margin: 3px;
+  font-size: 15px;
+  margin: 20px;
   color: white;
   background-color: gray;
 }
