change menu icon and content, linked add modify and logout pages

--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -277,7 +277,7 @@ header select {
     justify-content: center;
   }
 
-  .menubtn {
+  #menubtn {
     background: none;
     color: black;
     padding: 5px;
@@ -286,8 +286,10 @@ header select {
     cursor: pointer;
   }
   
-  .menubtn:hover, .menubtn:focus {
-    background-color: #3e8e41;
+  #menubtn:hover, .menubtn:focus {
+    border-radius: 8px;
+    background-color: black;
+    color: white;
   }
   
   .dropdownMenu {
@@ -298,7 +300,7 @@ header select {
   .menu-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: white;
     min-width: 160px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -307,6 +309,7 @@ header select {
   }
   
   .menu-content a {
+    font-family: 'Comfortaa';
     color: black;
     padding: 12px 16px;
     text-decoration: none;
