course comments dummy page, routed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -87,7 +87,7 @@
                 <p><b>Rating: </b>5/5 <b>from</b> 100 <b>students</b></p>
                 <a href="#">Add a review</a>
                 <p><b>Comments:</b></p>
-                <iframe src="review" height="261" width="446" style="border:none" title="Iframe Example"></iframe>
+                <iframe src="courseComments" height="261" width="446" style="border: none;" title="Iframe Example"></iframe>
             </div>
         </div>
       <% }) %>
