--- a/public/styles/courseCommentsStyle.scss
+++ b/public/styles/courseCommentsStyle.scss
@@ -21,11 +21,34 @@ body{
     font-size: 14px;
 }
 
-.keyword{
+.keywords{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    width: 100%;
+    text-align: center;
+
+    .keyword{
+        color: white;
+        background-color: #FFA300;
+        font-size: 14px;
+        padding: 5px 8px;
+        border-radius: 8px;
+        margin-right: 8px;
+    }  
+}
+
+.replyButtons{
+    text-align: center;
+}
+#reply, #showRep{
+    text-decoration: none;
     color: white;
-    background-color: #FFA300;
-    font-size: 14px;
-    padding: 5px 8px;
+    background-color: #68CC58;
     border-radius: 8px;
-    margin-right: 10px;
+    padding:5px 8px;
+}
+
+
+hr {
+    border: 0.3px solid black;
 }
