link "add a review" button to review page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,7 +85,7 @@
             <div class="course-contents">
                 <p><b>Description: </b><%= course.description %></p>
                 <p><b>Rating: </b>5/5 <b>from</b> 100 <b>students</b></p>
-                <a href="#">Add a review</a>
+                <a href="review">Add a review</a>
                 <p><b>Comments:</b></p>
                 <iframe src="courseComments" height="261" width="446" style="border: none;" title="Iframe Example"></iframe>
             </div>
