--- a/public/styles/indexStyle.css
+++ b/public/styles/indexStyle.css
@@ -247,11 +247,28 @@ header select {
     -webkit-transition-duration: 0.2s;
           transition-duration: 0.2s;
   }
+
+  .fa-star{
+    color: #E1E1E1;
+    margin-left: 7px;
+  }
+  
+  .fa-star-half-full{
+    color: #FFCF5C;
+    margin-left: 7px;
+  }
+  .checked{
+    color: #FFCF5C;
+  }
+
+  
+
+ 
   .collapsible:after {
     content: '▼';
     color: black;
     font-weight: bold;
-    margin-left: 78%;
+    margin-left: 50%;
     
   }
   
