Login and register - jwt authentication

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,21 +79,27 @@
         </div>
     </div>
 
-    <% Courses.forEach(course => { %>
+    <% Courses.forEach( (course)=> { %>
         <div class="course-content">
-            <button type="button" class="collapsible"><%= course.course %></button>
+            <button type="button" class="collapsible">
+                <%= course.course %>
+            </button>
             <div class="course-contents">
-                <p><b>Description: </b><%= course.description %></p>
+                <p><b>Description: </b>
+                    <%= course.description %>
+                </p>
                 <p><b>Rating: </b>5/5 <b>from</b> 100 <b>students</b></p>
                 <a href="#">Add a review</a>
                 <p><b>Comments:</b></p>
-                <iframe src="courseComments" height="261" width="446" style="border: none;" title="Iframe Example"></iframe>
+                <iframe src="courseComments" height="261" width="446" style="border: none;"
+                    title="Iframe Example"></iframe>
             </div>
         </div>
-      <% }) %>
+        <% }) %>
 
 </body>
 
+<script src="/socket.io/socket.io.js"></script>
 <script>
     var coll = document.getElementsByClassName("collapsible");
     var i;
@@ -109,6 +115,7 @@
             }
         });
     }
+
 </script>
 
 </html>
