--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,10 +24,10 @@
                 <ul class="nav-items">
                     <li>
                         <% if (user) { %>
-                            <%= user.email %>
-                          <% } else { %>
-                            <a href="/login">Login</a>
-                          <% } %>
+                            <a href="/userPage">Profile</a>
+                            <% } else { %>
+                                <a href="/login">Login</a>
+                                <% } %>
                     </li>
                 </ul>
             </nav>
@@ -42,9 +42,11 @@
                     <div class="dept-select">
                         <select name="department" id="department">
                             <option value="" disabled selected hidden>Select a department</option>
-                            <% Departments.forEach(departments => { %>
-                                <option value="test"><%= departments.department %></option>
-                          <% }) %>
+                            <% Departments.forEach(departments=> { %>
+                                <option value="test">
+                                    <%= departments.department %>
+                                </option>
+                                <% }) %>
                         </select>
                     </div>
                     <h2>OR</h2>
@@ -85,13 +87,14 @@
 
     <% Courses.forEach( (course)=> { %>
         <div class="course-content">
-            <button type="button" class="collapsible"><%= course.course %>
-                <!--avg star rating example-->
-                <span class="fa fa-star fa-lg checked"></span>
-                <span class="fa fa-star fa-lg checked"></span>
-                <span class="fa fa-star fa-lg checked"></span> <!-- full star -->
-                <span class="fa fa-star-half-full fa-lg"></span> <!-- half star-->
-                <span class="fa fa-star fa-lg"></span> <!-- unrated -->
+            <button type="button" class="collapsible">
+                <%= course.course %>
+                    <!--avg star rating example-->
+                    <span class="fa fa-star fa-lg checked"></span>
+                    <span class="fa fa-star fa-lg checked"></span>
+                    <span class="fa fa-star fa-lg checked"></span> <!-- full star -->
+                    <span class="fa fa-star-half-full fa-lg"></span> <!-- half star-->
+                    <span class="fa fa-star fa-lg"></span> <!-- unrated -->
             </button>
             <div class="course-contents">
                 <p><b>Description: </b>
