--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,7 @@
             <h2>Popular Courses</h2>
             <div class="filters">
                 <div class="course-filter">
-                    <select name="filter" id="filter">
+                    <select name="filter" id="filter" onchange="filterHandler(value)">
                         <option value="" disabled selected hidden>Filter</option>
                         <option value="200">200 Levels</option>
                         <option value="300">300 Levels</option>
@@ -127,6 +127,18 @@
             }
         });
     }
+
+    const filterHandler = (lvl) => {
+        var courses = document.getElementsByClassName("course-content");
+        for (var i = 0; i < courses.length; i++) {
+            let courseName = courses[i].children[0].innerText.replace(/\s/g,'');
+            if ((courseName.charAt(courseName.length - 3)) === lvl.slice(0, 1)) {
+                courses[i].style.display = "block";
+            } else {
+                courses[i].style.display = "none";
+            }
+        }
+    };
 
 </script>
 
