Add course to db

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <%- include('./partials/header'); %>
+    <%- include('./partials/header') %>
 
     <% Courses.forEach( (course)=> { %>
     <div class="course-content">
