--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,7 +27,7 @@
         <div class="filters">
             <div class="course-filter">
                 <select name="filter" id="filter" onchange="filterHandler(value)">
-                    <option value="" disabled selected hidden>Filter</option>
+                    <option value="" selected>Level</option>
                     <option value="200">200 Levels</option>
                     <option value="300">300 Levels</option>
                     <option value="400">400 Levels</option>
