--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,6 +99,7 @@
         });
     }
 
+    // TODO: select department and filter and sort working together
     const filterHandler = (lvl) => {
         var courses = document.getElementsByClassName("course-content");
         if (lvl == ""){
