--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
     <% Courses.forEach( (course)=> { %>
     <div class="course-content">
         <button type="button" class="collapsible">
-            <%= course.course %>
+            <%- course.course %>
             <!--avg star rating example-->
             <span class="fa fa-star fa-lg checked"></span>
             <span class="fa fa-star fa-lg checked"></span>
@@ -54,7 +54,7 @@
         </button>
         <div class="course-contents">
             <p><b>Description: </b>
-                <%= course.description %>
+                <%- course.description %>
             </p>
             <p><b>Rating: </b>5/5 <b>from</b> 100 <b>students</b></p>
             <a href="review">Add a review</a>
